# rusty_key_labeler

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.yaml
rusty_key_labeler/: Cargo.toml  config.yaml
rusty_key_labeler/src/: bounding_boxes.rs  components.rs  main.rs  resources.rs  settings.rs  systems.rs  ui.rs  utils.rs
rusty_key_labeler/src/components/: components.rs  mod.rs  ui.rs
rusty_key_labeler/src/systems/: bounding_box_systems.rs  image_systems.rs  input.rs  mod.rs  setup.rs  systems.rs  ui.rs  util_systems.rs  viewport.rs
src/: main.rs  settings.rs  yolo_project.rs
