[package]
edition = "2021"
name = "rusty_key_labeler"
version = "0.1.0"

[dependencies]
bevy = {version = "0.14.1", features = ["dynamic_linking", "serialize"]}
itertools = "0.13.0"
serde = "1.0"
serde_json = "1.0.129"
serde_yml = "0.0.12"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
