[package]
edition = "2021"
name = "rusty_key_labeler"
version = "0.1.0"

[dependencies]
bevy = {version = "0.14.1", features = ["dynamic_linking", "serialize"]}

bevy_prototype_lyon = "0.12"
bevy_vector_shapes = "0.8.2"
hashbrown = {version = "0.15.1", features = ["serde"]}
itertools = "0.13.0"
serde = "1.0"
serde_json = "1.0.129"
serde_yml = "0.0.12"
yolo_io = {path = "../yolo_io"}

# TODO: Move to dev-dependencies
bevy-inspector-egui = "0.27.0"
