[package]
edition = "2021"
name = "rusty_key_labeler"
version = "0.1.0"

[dependencies]
bevy = {version = "0.15.0", features = ["dynamic_linking", "serialize"]}

bevy_ui_views = {path = "../bevy_ui_views"}
bevy_vector_shapes = "0.9.2"
hashbrown = {version = "0.15.1", features = ["serde"]}
itertools = "0.13.0"
serde = "1.0"
serde_json = "1.0.129"
serde_yml = "0.0.12"
yolo_io = {path = "../yolo_io"}

# TODO: Move to dev-dependencies
bevy-inspector-egui = "0.27.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
